# YurOTS

./: .gitignore  CMakeLists.txt  compile.bat
cmake/: boost.cmake  libxml2.cmake  lua.cmake
source/: actions.cpp  definitions.h  fileloader.cpp  fileloader.h  iomapotbm.cpp  item.h  luascript.cpp  luascript.h  npc.cpp  spells.cpp  spells.h  summons.cpp
